--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Mexico's soccer team</title>
+</head>
+<body>
+
+<h1 align="center">Mexico's soccer team</h1>
+
+<h3>Check out our pages:</h3>
+<nav>
+  	<ul>
+    	<li><a href="Recent_Results.html">Recent Results</a></li>
+    	<li><a href="Roster.html">Roster</a></li>
+  	</ul>
+</nav>
+
+<img src="Mexico-2016-Copa-America-Kit.jpg">
+
+
+
+<p><br></p>
+<p><br></p>
+
+<footer><a href="index.html">Home</a></footer>
+
+</body>
+</html>
