--- a/Recent_Results.html
+++ b/Recent_Results.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Recent Results</title>
+  <meta charset = ‘UTF=8’>
+  <title>Mexico's soccer team</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
 
 <h3>Mexico's recent results:</h3>
