--- a/Roster.html
+++ b/Roster.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Roster</title>
+	<meta charset = ‘UTF=8’>
+	<title>Mexico's soccer team</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
