--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset = ‘UTF=8’>
 	<title>Mexico's soccer team</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<div id="Mexico">
+	<h1 align="center">Mexico</h1>
+</div>
 
-<h1 align="center">Mexico's soccer team</h1>
+<nav align="center">
+  	<a href="Recent_Results.html">Recent Results</a></li> |
+    <a href="Roster.html">Roster</a></li>
+ </nav>
 
-<h3>Check out our pages:</h3>
-<nav>
-  	<ul>
-    	<li><a href="Recent_Results.html">Recent Results</a></li>
-    	<li><a href="Roster.html">Roster</a></li>
-  	</ul>
-</nav>
+<!--<img src="Mexico-2016-Copa-America-Kit.jpg">-->
 
-<img src="Mexico-2016-Copa-America-Kit.jpg">
-
-
-
-<p><br></p>
-<p><br></p>
 
 <footer><a href="index.html">Home</a></footer>
 
