Added CSS part1

--- a/Roster.html
+++ b/Roster.html
@@ -2,10 +2,21 @@
 <html>
 <head>
 	<meta charset = ‘UTF=8’>
-	<title>Mexico's soccer team</title>
+	<title>Mexico's Roster</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+
+<h1><a href="index.html" id="mexico">Mexico</a></h1>
+
+
+<nav align="center">
+  	<ul>
+  		<li><a href="index.html">Home</a></li>
+  		<li><a href="Recent_Results.html">Recent Results</a></li>
+    	<li><a href="Roster.html">Roster</a></li>
+	</ul>
+ </nav>
 
 
 <h3>Roster:</h3>
