--- a/Recent_Results.html
+++ b/Recent_Results.html
@@ -2,16 +2,28 @@
 <html>
 <head>
   <meta charset = ‘UTF=8’>
-  <title>Mexico's soccer team</title>
+  <title>Mexico's recent results</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
+
+<h1><a href="index.html" id="mexico">Mexico</a></h1>
+
+
+<nav align="center">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Recent_Results.html">Recent Results</a></li>
+      <li><a href="Roster.html">Roster</a></li>
+  </ul>
+ </nav>
+
+<br>
 
 <h3>Mexico's recent results:</h3>
 
-
-<table border=1>
+<div>
+<table border=1 id="table">
   <tr>
       <th>Tournament</th>    
       <th>Opponent</th>    
@@ -71,7 +83,7 @@
     </tr>
 </table>
 
-
+</div>
 
 <br>
 <br>
