--- a/index.html
+++ b/index.html
@@ -6,19 +6,36 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<div id="Mexico">
-	<h1 align="center">Mexico</h1>
-</div>
+
+<h1><a href="index.html" id="mexico">Mexico</a></h1>
+
 
 <nav align="center">
-  	<a href="Recent_Results.html">Recent Results</a></li> |
-    <a href="Roster.html">Roster</a></li>
+  	<ul>
+  		<li><a href="index.html">Home</a></li>
+  		<li><a href="Recent_Results.html">Recent Results</a></li>
+    	<li><a href="Roster.html">Roster</a></li>
+    	<li><a href="Roster.html">Copa America</a></li>
+    	<li><a href="Roster.html">About</a></li>
+	</ul>
  </nav>
 
-<!--<img src="Mexico-2016-Copa-America-Kit.jpg">-->
+
+<main>
+
+<p>Stuff, yanno</p>
 
 
-<footer><a href="index.html">Home</a></footer>
+<h3>Recent goals</h3>
+<h3>Recent results</h3>
+
+
+
+
+
+</main>
+
+<footer><a href="index.html">Created by Bernardo Saravia, 2016</a></footer>
 
 </body>
 </html>
